# share_mipt

./: README.md
Problem_SE/: CMakeLists.txt  README.md
Problem_SE/docs/: Doxyfile
Problem_SE/src/: main.cc  main.cpp
Problem_SE/src/common/: common.cpp  common.hpp  test.cc  test.cpp  test.hh  test.hpp
Problem_SE/src/eq_solver/: eq_solver.cc  eq_solver.cpp  eq_solver.hh  eq_solver.hpp
Problem_TS/: CMakeLists.txt  README.md
Problem_TS/exmpls/: hamlet.txt  hello.txt
Problem_TS/results/: hamlet_fwd_std.txt  hello_bwd_cust.txt  hello_bwd_std.txt  hello_fwd_cust.txt  hello_fwd_std.txt  hmlt_bwd_cust.txt  hmlt_bwd_std.txt  hmlt_fwd_cust.txt  hmlt_fwd_std.txt
Problem_TS/src/: get_opt.cc  main.cc
Problem_TS/src/common/: err_proc.hh  m_qsort.cc  m_qsort.hh  my_str.hh  qsort
Problem_TS/src/err_proc/: err_proc.cc  err_proc.hh
Problem_TS/src/m_qsort/: m_qsort.cc  m_qsort.hh
Problem_TS/src/my_str/: my_str.cc  my_str.hh
Problem_TS/src/text_sortion/: text_sortion.cc  text_sortion.hh
